Unreleased Changes
==================
- Fixed DYNPROXY-ISSUE-99: "Generated proxy class has no namespace", which due to a bug in WPF caused issues with databinding. Now proxies are in namespace Castle.Proxies
- Fixed DYNPROXY-97: This issue are actually three separate bugs:
  First relates to the improper handling of types with generic methods having parameters being an array of generic type of T
  Second was related to improper handing of hierarchy of generic constraints, but it seems Fabian's fix to GenericUtil fixed that earlier.
  Third issue was related to improper handing of certain kinds of constructor arguments passed to class proxy generator.
- Fixed DYNPROXY-90: "DP2: Inherited interfaces w/ target does not to work"
- Fixed DYNPROXY-88: "proxy generation fail when multiple interfaces have common base interface"
  They both were actually special cases of one issue with invalid collection of interface members.

- Fixed DYNPROXY-92: "Proxy fails when creating a Proxy for certain Generic signatures"
  The problem was that GenericUtil.cs wrongfully copied generic arguments whose constraints referenced the proxied method without adjusting those
  consttraints.

2.1.0 (2009-05-04)
==================
- Fixed DYNPROXY-87: "Mixin takes precedence over target object"
  changed DP to throw exceptions when two mixins implement the same interface or a mixin implements the same interface as its target class/object

- Applied Krzysztof Kozmic's patch improving the XML documentation of IInterceptorSelector
  and IProxyGenerationHook.

2.1.0 RC1 (2009-03-10)
======================
- Applied Krzysztof Kozmic's patch improving the XML documentation and parameter names of IProxyBuilder, DefaultProxyBuilder and ProxyGenerator.

- Applied Krzysztof Kozmic's patch heavily improving the XML documentation of ProxyGenerator.

- Fixed DYNPROXY-ISSUE-84: "UseSingleInterfaceProxy on ProxyGenerationOptions is never used and should be removed"
