@@ -41,13 +41,13 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.2.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+    <Reference Include="nunit.framework, Version=2.5.0.9122, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\SharedLibs\net\2.0\nunit.framework.dll</HintPath>
+      <HintPath>..\..\..\..\Castle\build\net-3.5\release\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="Rhino.Mocks.CPP.Interfaces, Version=1.0.3077.40500, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=x86">
+    <Reference Include="Rhino.Mocks.CPP.Interfaces, Version=1.0.3078.4206, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\build\net-3.5\debug\Rhino.Mocks.CPP.Interfaces.dll</HintPath>
+      <HintPath>..\..\..\..\Castle\build\net-3.5\release\Rhino.Mocks.CPP.Interfaces.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -126,7 +126,7 @@
     <Compile Include="Classes\ClassCallingVirtualMethodFromCtor.cs" />
     <Compile Include="Classes\ClassWithCharRetType.cs" />
     <Compile Include="Classes\ClassWithConstructors.cs" />
-    <Compile Include="Classes\ClassWithCtorTakingArray.cs" />
+    <Compile Include="Classes\ClassWithVariousConstructors.cs" />
     <Compile Include="Classes\ClassWithInternalDefaultConstructor.cs" />
     <Compile Include="Classes\ClassWithProtectedDefaultConstructor.cs" />
     <Compile Include="Classes\MySerializableClass.cs" />
