@@ -1,5 +1,9 @@
 Unreleased Changes
 ==================
+- Improved exception message when can not instantiate class proxy due to invalid arguments.
+- Reverted changes introduced in fix for DYNPROXY-ISSUE-97 for the constructor issue. It actually is an issue with params object[] which is confusing and can lead to errors like the one reported, and the fix was inconsistent with the other overload that had arguments passed as explicit object[] and could break the other overload in some scenarios.
+- Marked the overload of CreateClassProxy having params object[] as obsolete
+- introduced another overload that takes constructor arguments as explicit array, and interceptors as params IInterceptor[] which is the pattern for all other overloads anyway. 
 - Fixed DYNPROXY-ISSUE-99: "Generated proxy class has no namespace", which due to a bug in WPF caused issues with databinding. Now proxies are in namespace Castle.Proxies
 - Fixed DYNPROXY-97: This issue are actually three separate bugs:
   First relates to the improper handling of types with generic methods having parameters being an array of generic type of T
